[package]
name = 'subject-classifier'
authors = ['Bahtiar `kalkin-` Gadimov <bahtiar@gadimov.de>']
categories = ['data-structures', 'text-processing']
description = '''Library for classifying a commit by it's subject'''
edition = '2021'
keywords = ['changelog']
license = 'LGPL-3.0-or-later'
repository = 'https://github.com/kalkin/rust-subject-classifier'
version = '0.4.1'

[lib]

[dependencies]
lazy_static = '1.4'
regex = '1'
